--- a/trabalhoFoto/trabalhoPg2.html
+++ b/trabalhoFoto/trabalhoPg2.html
@@ -9,13 +9,55 @@
 </head>
 <h1>Skin</h1>
 <body>
-    <h1 id="camille_cibernetica">
+    <h1 id="camille">
      Camille Cibernética
-        <img src="/img/Camille Cibernética.jpg" alt="" style="width: 700px; height: 400px;">
+        <p><img src="/img/Camille Cibernética.jpg" alt="" style="width: 700px; height: 400px;"></p>
         <p id="camille_cover">
             Camille Congregação das Bruxas 
-            <img src="/img/camile cover.jpg" alt="" style="width: 700px; height: 400px;" >
-        </p>
+            <p><img src="/img/camile cover.jpg" alt="" style="width: 700px; height: 400px;" ></p>
+            <h2>Tabela de preco</h2>
+            <table>
+                <tr>
+                    <th>Nome</th>
+                    <th>ano</th>
+                    <th>custo</th>
+                </tr>
+                <tr>
+                <td>Camille Cibernética </td>
+                <td>2016</td>
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>Camille Congregação das Bruxas</td>
+                <td>2018</td>   
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>IG Camille</td>
+                <td>2018</td>   
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>Camille Arcana</td>
+                <td>2021</td>   
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>Camille Comandante de Ataque</td>
+                <td>2022</td>   
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>Camille Bênção do Inverno</td>
+                <td>2023</td>   
+                <td>1350rp</td>
+            </tr>
+            <tr>
+                <td>Camille Bênção do Inverno Prestígio</td>
+                <td>150 Mythic</td>   
+                <td>1350rp</td>
+            </tr>
+            </table>
     </h1>
     
 </body>
